Fixed overlapping map toggle

--- a/src/web/assets/src/sass/address.scss
+++ b/src/web/assets/src/sass/address.scss
@@ -1,3 +1,13 @@
+// To accommodate the map toggle, adjust margin of "copy" div
+div[data-type="doublesecretagency\\googlemaps\\fields\\AddressField"] {
+  .copytextbtn {
+    &.gm-toggle-both {margin-right: 94px;}
+    &.gm-toggle-text {margin-right: 79px;}
+    &.gm-toggle-icon {margin-right: 21px;}
+  }
+}
+
+// Adjust subfield margins
 .address-field {
   width: 101%;
   input {
@@ -6,6 +16,7 @@
   }
 }
 
+// Maps embedded in Address fields
 .gm-map {
   height: 240px;
   width: 99%;
